Minor changes to fix current problems in the maven compilation of bflow, bcool and the coordinatedengine