@@ -12,52 +12,5 @@
   <version>1.0.0-SNAPSHOT</version>
   <description>This project contains the  Xtext of BFloW</description>
   <url>http://bcool.inria.fr</url>
-  <build>
-		<plugins>			
-  			 <plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2.1</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>java</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					  <argLine>-Xmx1024m</argLine>
-					  <argLine>-Xms1024m</argLine>
-					  <argLine>-XX:PermSize=512m</argLine>
-					  <argLine>-XX:MaxPermSize=1024m</argLine>
-					<includeProjectDependencies>false</includeProjectDependencies>
-					<includePluginDependencies>true</includePluginDependencies>
-					<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
-					<arguments>
-						<argument>file://${project.basedir}/src/org/gemoc/bflow/GenerateBFlow.mwe2</argument>
-						<argument>
-							-p
-						</argument>
-						<argument>
-							runtimeProject=/${project.basedir}
-						</argument>
 
-					</arguments>
-				</configuration>
-                <dependencies>
-					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>org.eclipse.xtext.xtext</artifactId>
-						<version>${xtext.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>org.eclipse.xtext.xbase</artifactId>
-						<version>${xtext.version}</version>
-					</dependency>
-                </dependencies>
-			</plugin> 
-		</plugins>
-	</build>
 </project>
